Поправил все замечания кроме одного